--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AG'
 - !lcsh 'Questions and answers -- Periodicals'
+- GITenberg
 title: Notes and Queries, Number 04, November 24, 1849
 url: http://www.gutenberg.org/ebooks/13513
